keyed in SMTP credentials
